[package]
name = "anonimax"
version = "0.2.0"
edition = "2021"
description = "Modular anti-detect CLI panel"

[[bin]]
name = "anonimax"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
wreq = { version = "5.3", features = ["socks"] }
wreq-util = "2.2"
async-trait = "0.1"
anyhow = "1"
rustyline = "14"
owo-colors = "4"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = "0.8"

[profile.release]
opt-level = 3
lto = true
strip = true
